# roslop

./: .gitignore  Cargo.toml  README.md
plugin/: roblox_plugin.luau
src/: main.rs
src/api/: ai.rs  mod.rs  roblox.rs
