[package]
name = "roslop"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"]}
