[package]
name = "roslop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["ws"]}
color-eyre = "0.6.3"
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"]}
uuid = { version = "1.23.1", features = ["v4"]}
